objects/ERPCustomer__x.object
<CustomObject>
    <description>customer</description>
    <externalDataSource>PostgressCustomers</externalDataSource>
    <externalName>customer</externalName>
    <fields>
        <fullName>address__c</fullName>
        <description>address</description>
        <externalDeveloperName>address</externalDeveloperName>
        <label>address</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>chgdate__c</fullName>
        <description>chgdate</description>
        <externalDeveloperName>chgdate</externalDeveloperName>
        <label>chgdate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>chguser__c</fullName>
        <description>chguser</description>
        <externalDeveloperName>chguser</externalDeveloperName>
        <label>chguser</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>city__c</fullName>
        <description>city</description>
        <externalDeveloperName>city</externalDeveloperName>
        <label>city</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>company__c</fullName>
        <description>company</description>
        <externalDeveloperName>company</externalDeveloperName>
        <label>company</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>country__c</fullName>
        <description>country</description>
        <externalDeveloperName>country</externalDeveloperName>
        <label>country</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>fax__c</fullName>
        <description>fax</description>
        <externalDeveloperName>fax</externalDeveloperName>
        <label>fax</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id__c</fullName>
        <description>id</description>
        <externalDeveloperName>id</externalDeveloperName>
        <label>id</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>phone__c</fullName>
        <description>phone</description>
        <externalDeveloperName>phone</externalDeveloperName>
        <label>phone</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sapid__c</fullName>
        <description>sapid</description>
        <externalDeveloperName>sapid</externalDeveloperName>
        <label>sapid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sfid__c</fullName>
        <description>sfid</description>
        <externalDeveloperName>sfid</externalDeveloperName>
        <label>sfid</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>state__c</fullName>
        <description>state</description>
        <externalDeveloperName>state</externalDeveloperName>
        <label>state</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zip__c</fullName>
        <description>zip</description>
        <externalDeveloperName>zip</externalDeveloperName>
        <label>zip</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <label>ERP Customer</label>
    <listViews>
        <fullName>All</fullName>
        <columns>ExternalId</columns>
        <columns>company__c</columns>
        <columns>Id</columns>
        <columns>address__c</columns>
        <columns>city__c</columns>
        <columns>country__c</columns>
        <columns>fax__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <pluralLabel>ERP customer</pluralLabel>
</CustomObject>